--- a/css/post.css
+++ b/css/post.css
@@ -1,6 +1,6 @@
 /* TYPOGRAPHY */
 
-body {
+.article-wrapper {
     font-size: 18px;
 }
 
